<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.view.MapFragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E5E5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMenu"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="8dp"
                android:background="@drawable/circle_bg"
                android:padding="2dp"
                android:src="@drawable/ic_menu" />

            <EditText
                android:id="@+id/txtLocation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/edittext_bg"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center_vertical"
                android:hint="@string/your_location"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/txtDestination"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="14dp"
                android:background="@drawable/edittext_bg"
                android:backgroundTint="@color/colorWhite"
                android:gravity="center_vertical"
                android:hint="@string/destination"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="normal" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlaces"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvLocation"
        tools:listitem="@layout/item_places" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRequestRD"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/request_rd"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:padding="20dp"
        android:background="@drawable/button_bg"
        android:textColor="@drawable/button_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>